Restore 1.4.2 compatability.
`Integer.valueOf(int)` didn't arrive until 5.0 so use `new Integer(int)`
instead.


git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk@2690 bc24b658-cf39-4249-b827-e3526eaaeb42